--- a/application.properties
+++ b/application.properties
@@ -1,4 +1,8 @@
 
 my.common.prop=abc
 
+management.security.enabled=false
+
 feign.hystrix.enabled=true
+
+eureka.instance.metadataMap.cluster=default
