--- a/dashboardservice.properties
+++ b/dashboardservice.properties
@@ -1,1 +1,11 @@
 server.port=8900
+
+turbine.combineHostPort=true
+turbine.instanceInsertPort=true
+
+turbine.appConfig=reservationservice,reservationclient,gatewayservice
+
+turbine.clusterNameExpression="'default'"
+
+#turbine.aggregator.clusterConfig=default
+#turbine.clusterNameExpression=metadata['cluster']
