--- a/application.properties
+++ b/application.properties
@@ -6,3 +6,7 @@ management.security.enabled=false
 feign.hystrix.enabled=true
 
 eureka.instance.metadataMap.cluster=default
+
+spring.zipkin.baseUrl=http://localhost:8070/
+spring.sleuth.sampler.percentage=1.0
+spring.sleuth.log.json.enabled=true
