Added creatig eligible reservation with streams

--- a/application.properties
+++ b/application.properties
@@ -10,3 +10,6 @@ eureka.instance.metadataMap.cluster=default
 spring.zipkin.baseUrl=http://localhost:8070/
 spring.sleuth.sampler.percentage=1.0
 spring.sleuth.log.json.enabled=true
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
