--- a/reservationservice.properties
+++ b/reservationservice.properties
@@ -1,3 +1,7 @@
 server.port=0
 
 info.myinfo=This is me
+
+spring.cloud.stream.bindings.reservationRequests.destination=reservations
+spring.cloud.stream.bindings.reservationRequests.group=reservations
+spring.cloud.stream.bindings.reservationRequests.durableSubscription=true
