--- a/reservationclient.properties
+++ b/reservationclient.properties
@@ -1,1 +1,5 @@
 server.port=9999
+
+
+spring.cloud.stream.bindings.createReservation.destination=reservations
+spring.cloud.stream.bindings.createReservation.durableSubscription=true
